<resources>
    <string name="app_name">Rent24</string>
    <string name="app_short_name">Driver</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main_maps">Car Pickup</string>
    <string name="map">Map</string>
    <string name="snaps">Snaps</string>
    <string name="invoice">Invoice</string>
    <string name="profile">Profile</string>
    <string name="input_password">********</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="base_api_url">http://www.technidersolutions.com/realestate/public/api</string>
    <string name="go_online">Go Online</string>
    <string name="scheduled">Scheduled</string>
    <string name="completed">Completed</string>
    <string name="job">Job</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="when">When:</string>
    <string name="type">Type:</string>
    <string name="total">Total</string>
    <string name="rcm_id">RCM ID</string>
    <string name="client">Client:</string>
    <string name="contact">Contact:</string>
    <string name="task">Task:</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="receipt">Receipt</string>
    <string name="amount">Amount</string>
    <string name="password">Password</string>
    <string name="fuel_range">Fuel Range</string>
    <string name="odometer">Odometer</string>
    <string name="clean">Clean</string>
    <string name="dirty">Dirty</string>
    <string name="condition">Condition</string>
    <string name="damage">Damage</string>
    <string name="notes">Notes</string>
    <string name="upload_pictures">upload pictures</string>
    <string name="car_details">Car Details</string>
    <string name="pickup">pickup</string>
    <string name="mid_stop">mid-stop</string>
    <string name="drop_off">drop off</string>
    <string name="sign_out">sign out</string>
</resources>
