<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choices_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/list_item_spacing"
        android:paddingTop="@dimen/list_item_spacing"
        android:paddingRight="@dimen/list_item_spacing"
        android:paddingBottom="@dimen/list_item_spacing">
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/snap_for"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/choices_group"
            app:layout_constraintStart_toStartOf="parent" />
        <RadioGroup
            android:id="@+id/choices_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/list_item_spacing_half"
            android:paddingBottom="@dimen/list_item_spacing_half"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/choice_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:background="?attr/selectableItemBackground"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/choice_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:background="?attr/selectableItemBackground"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/choice_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt"
                android:background="?attr/selectableItemBackground"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
