<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.rent24.driver.components.map.dialog.CarDetailsViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/bottom_sheet_behavior">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/form_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dialog_heading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/car_details"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fuel_range_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:layout_constraintTop_toBottomOf="@id/dialog_heading"
                    app:layout_constraintBottom_toTopOf="@id/odometer_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColorHint="@color/colorAccent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fuel_range"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fuel_range"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textColorHighlight="@color/colorAccent"
                        android:textColorLink="@color/colorAccent"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/odometer_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:layout_constraintTop_toBottomOf="@id/fuel_range_layout"
                    app:layout_constraintBottom_toTopOf="@id/condition_chip_group"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColorHint="@color/colorAccent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/odometer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/odometer"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textColorHighlight="@color/colorAccent"
                        android:textColorLink="@color/colorAccent"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/condition_chip_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@id/odometer_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/condition"
                        android:textAppearance="?attr/textAppearanceLargePopupMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/clean"
                        android:checkable="true" />
                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/dirty"
                        android:checkable="true" />
                </com.google.android.material.chip.ChipGroup>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/damage_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:layout_constraintTop_toBottomOf="@id/condition_chip_group"
                    app:layout_constraintBottom_toTopOf="@id/notes_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColorHint="@color/colorAccent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/damage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/damage"
                        android:inputType="textAutoCorrect|textAutoComplete"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textColorHighlight="@color/colorAccent"
                        android:textColorLink="@color/colorAccent"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notes_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:layout_constraintTop_toBottomOf="@id/damage_layout"
                    app:layout_constraintBottom_toTopOf="@id/preview_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColorHint="@color/colorAccent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/notes"
                        android:inputType="textAutoCorrect|textAutoComplete"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textColorHighlight="@color/colorAccent"
                        android:textColorLink="@color/colorAccent"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/preview_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@id/notes_layout"
                    app:layout_constraintBottom_toTopOf="@id/submit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_pictures"
                    style="?android:textAppearanceButton"
                    android:theme="@style/AppTheme.MaterialButton"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/preview_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:visibility="gone"
                app:layout_anchor="@id/form_container"
                app:layout_anchorGravity="center" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.core.widget.NestedScrollView>
</layout>