<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/map_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:id="@+id/map_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/button_over_map_margin_bottom"
            style="?android:textAppearanceButton"
            android:theme="@style/AppTheme.MaterialButton"
            android:textStyle="bold"
            app:layout_anchor="@id/map_fragment_container"
            app:layout_anchorGravity="bottom" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/trip_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid_stop"
            android:layout_marginBottom="@dimen/button_over_map_margin_bottom"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            style="?android:textAppearanceButton"
            android:theme="@style/AppTheme.MaterialButton"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_anchor="@id/map_fragment_container"
            app:layout_anchorGravity="bottom" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dropoff_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_off"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/button_over_map_margin_bottom"
            style="?android:textAppearanceButton"
            android:theme="@style/AppTheme.MaterialButton"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_anchor="@id/map_fragment_container"
            app:layout_anchorGravity="bottom|center" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/drop_off_navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/button_over_map_margin_bottom"
            android:theme="@style/AppTheme.FloatingActionButton"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_navigation_black_24dp"
            app:layout_anchor="@id/map_fragment_container"
            app:layout_anchorGravity="end|bottom"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/center_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="88dp"
            android:theme="@style/AppTheme.FloatingActionButton"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_gps_fixed_black_24dp"
            app:layout_anchor="@id/map_fragment_container"
            app:layout_anchorGravity="end|bottom"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>